--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,5 +2,8 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "background-color": "#4158D0",
+"background-image": "linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%)"
+
 }
