--- a/public/projects.json
+++ b/public/projects.json
@@ -111,6 +111,13 @@
       "categories": ["reactnative", "frontend", "mobile", "nodejs", "backend"],
       "thumbnail": "/thumbnails/tasklistmobile.jpg",
       "link": "https://www.youtube.com/watch?v=hPr-Yc92qaY&ab_channel=A2ZHighlights"
+    },
+    {
+      "name": "Soon",
+      "description": "Soon",
+      "categories": ["typescript"],
+      "thumbnail": "/soon.png",
+      "link": ""
     }
   ]
 }
